# copie-rtype-miaou

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/src/: Main.cpp
client/src/events/: EventBus.hpp  EventTypes.hpp
client/src/game/: EntitiesFactory.cpp  EntitiesFactory.hpp  GameClient.cpp  GameClient.hpp  GameScene.cpp  GameScene.hpp  Starfield.cpp  Starfield.hpp
client/src/graphics/SFML/: SFMLEntityCreation.cpp  SFMLEntityCreation.hpp  SFMLEntityDrawing.cpp  SFMLEntityDrawing.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  SFMLSpriteManagement.cpp  SFMLSpriteManagement.hpp  SFMLTextureManager.cpp  SFMLTextureManager.hpp
client/src/graphics/interfaces/: IRenderer.hpp  ISpriteFactory.hpp  ITextureManager.hpp
client/src/inputs/: SFMLInputHandler.cpp  SFMLInputHandler.hpp
client/src/inputs/interfaces/: IInputHandler.hpp
client/src/networks/interfaces/: IClientPacket.hpp
client/src/networks/protocol/: PacketBase.hpp  PacketHeader.hpp
client/src/networks/protocol/client/: PacketConnect.hpp  PacketInput.hpp
client/src/networks/protocol/server/: PacketCreate.hpp  PacketDamage.hpp  PacketDestroy.hpp  PacketSnapshot.hpp
client/src/networks/udp/: PacketTypes.hpp  UDPClientPacket.cpp  UDPClientPacket.hpp
client/src/networks/wrappers/: NetWrapper.cpp  NetWrapper.hpp
docs/: CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  docusaurus.config.js  sidebars.js  ux_accessibility_guidelines.md
docs/docs/technical-docs/client/graphic/: graphic_doc.md
docs/docs/technical-docs/client/network/: client_network_doc.md
docs/docs/technical-docs/server/: overview.md
docs/docs/technical-docs/server/engine/: ai.md  audio.md  ecs.md  overview.md  physics.md  rendering.md
docs/docs/technical-docs/server/network/: UDPServer.md  network.md  netwrapper-and-sockets.md
docs/docs/user-guide/: mechanics_and_roles.md
docs/src/components/HomepageFeatures/: index.js
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
scripts/: lint-check.sh  lint-fix.sh
server/: CMakeLists.txt
server/src/: Main.cpp
server/src/buffer/RingBuffer/: RingBuffer.hpp  RingBuffer.tpp
server/src/buffer/interfaces/: IBuffer.hpp
server/src/ecs/components/: AIBrain.hpp  Attack.hpp  Collision.hpp  Controllable.hpp  Damage.hpp  Damageable.hpp  Direction.hpp  Drawable.hpp  Health.hpp  Position.hpp  Score.hpp  Velocity.hpp
server/src/ecs/core/: Entity.cpp  Entity.hpp  Registry.cpp  Registry.hpp  Registry.tpp  SparseArray.hpp  SparseArray.tpp
server/src/network/: Endian.hpp
server/src/packet/: DamagePacket.hpp  DefaultPacket.hpp  EntityCreatePacket.hpp  EntityDestroyPacket.hpp  HeaderPacket.hpp
server/src/packet/PacketFactory/: PacketFactory.cpp  PacketFactory.hpp  PacketFactory.tpp
server/src/server/NetWrapper/: NetWrapper.cpp  NetWrapper.hpp
server/src/server/UDPServer/: UDPServer.cpp  UDPServer.hpp  socketParams.hpp
server/src/server/UDPServer/PacketReceived/: IServerPacket.hpp  UDPPacket.cpp  UDPPacket.hpp
server/src/server/interfaces/: AServer.cpp  AServer.hpp  IServer.hpp
server/src/signal/PosixHandler/: PosixHandler.cpp  PosixHandler.hpp
server/src/signal/SignalHandler/: SignalHandler.cpp  SignalHandler.hpp
server/src/signal/WinHandler/: WinHandler.cpp  WinHandler.hpp
server/src/signal/interfaces/: ISignalHandler.hpp
server/tests/: CMakeLists.txt  testEntity.cpp  testRegistry.cpp  testSparseArray.cpp
